[Connects #73, #51, #75] Fix small UI things
* Add styles for flash errors/notices
* Truncate message body in index view
* Improve error message when test send fails

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,28 @@
 @import "sass/core";
 
+.flash {
+  &-error {
+    background-color: #FF6565;
+  }
+
+  &-notice {
+    background-color: #A4E7A0;
+  }
+
+  color: black;
+  position: fixed;
+  font-weight: bold;
+  width: 96%;
+  margin: 20px;
+
+  p {
+    font-size: 110%;
+    margin: 15px 0;
+  }
+}
+
 .logo-18f {
-	width: 25px;
-	float: left;
-	margin-right: 10px;
+  width: 25px;
+  float: left;
+  margin-right: 10px;
 }
